--- a/src/server/package.json
+++ b/src/server/package.json
@@ -11,6 +11,7 @@
     "apollo-server-express": "^3.5.0",
     "class-validator": "^0.13.2",
     "express": "^4.17.1",
+    "firebase": "^9.5.0",
     "graphql": "^15.3.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
