--- a/src/server/package.json
+++ b/src/server/package.json
@@ -8,13 +8,18 @@
     "start": "nodemon --exec ts-node index.ts"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.15.0",
     "apollo-server-express": "^3.5.0",
+    "axios": "^0.24.0",
+    "bluebird": "^3.7.2",
     "class-validator": "^0.13.2",
     "express": "^4.17.1",
     "firebase": "^9.5.0",
     "graphql": "^15.3.0",
+    "redis": "^4.0.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
