--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.15.0",
-    "apollo-server-express": "^3.5.0",
     "axios": "^0.24.0",
     "bluebird": "^3.7.2",
     "class-validator": "^0.13.2",
+    "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
     "firebase": "^9.5.0",
     "graphql": "^15.3.0",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.10",
+    "apollo-server-express": "^3.5.0",
     "nodemon": "^2.0.15"
   }
 }
