--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -4,6 +4,7 @@
       "experimentalDecorators": true,
       "target": "ES6",
       "rootDir": "./",   
-      "moduleResolution": "node"
+      "moduleResolution": "node",
+      "allowSyntheticDefaultImports": true
     }
 }
