--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.15.0",
+    "@types/cors": "^2.8.12",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
@@ -20,6 +23,7 @@
     "graphql": "^15.3.0",
     "graphql-passport": "^0.6.4",
     "passport": "^0.5.0",
+    "passport-spotify": "^2.0.0",
     "redis": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
