--- a/src/server/package.json
+++ b/src/server/package.json
@@ -8,8 +8,9 @@
     "start": "nodemon --exec ts-node index.ts --emitDecoratorMetadata --experimentalDecorators --watch ./ --ext .ts"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^7.13.0",
+    "@elastic/elasticsearch": "7.13.0",
     "@types/cors": "^2.8.12",
+    "apollo-server": "^3.5.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
