--- a/src/client/package.json
+++ b/src/client/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.5",
     "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "graphql": "^15.0.0",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
