--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -27,7 +27,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "lib/auth.js", "lib/auth.js", "lib/auth.js", "lib/auth.js"  ],
   "exclude": [
     "node_modules"
   ]
