--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "axios": "^0.24.0",
+    "graphql": "^15.0.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "graphql": "^15.0.0",
-    "axios": "^0.24.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
