--- a/src/client/package.json
+++ b/src/client/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.24.0",
     "graphql": "^15.0.0",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "next": "12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "eslint": "7.32.0",
