--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "@material-ui/core": "^4.12.3",
     "axios": "^0.24.0",
     "graphql": "^15.0.0",
     "js-cookie": "^3.0.1",
+    "material-ui": "^0.20.2",
     "next": "12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
