--- a/src/client/package.json
+++ b/src/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.24.0",
     "graphql": "^15.0.0",
     "js-cookie": "^3.0.1",
