--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "next": "12.0.4",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
