--- a/src/client/package.json
+++ b/src/client/package.json
@@ -11,11 +11,13 @@
     "@apollo/client": "^3.5.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "axios": "^0.24.0",
     "graphql": "^15.0.0",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "material-ui": "^0.20.2",
+    "moment": "^2.29.1",
     "next": "12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
