--- a/src/server/package.json
+++ b/src/server/package.json
@@ -27,7 +27,9 @@
     "passport-spotify": "^2.0.0",
     "redis": "^4.0.0",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.4.0",
     "type-graphql": "^1.1.1",
+    "typescript": "^4.5.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
