--- a/src/server/package.json
+++ b/src/server/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.5.0",
     "graphql": "^15.3.0",
     "graphql-passport": "^0.6.4",
+    "lodash": "^4.17.21",
     "passport": "^0.5.0",
     "passport-spotify": "^2.0.0",
     "redis": "^4.0.0",
@@ -36,6 +37,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.10",
     "@types/passport": "^1.0.7",
     "@types/passport-spotify": "^2.0.1",
