--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.2.4",
     "axios": "^0.24.0",
     "graphql": "^15.0.0",
     "js-cookie": "^3.0.1",
