--- a/src/server/package.json
+++ b/src/server/package.json
@@ -21,8 +21,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "firebase": "^9.5.0",
+    "gm": "^1.23.1",
     "graphql": "^15.3.0",
     "graphql-passport": "^0.6.4",
+    "imagemagick": "^0.1.3",
     "lodash": "^4.17.21",
     "passport": "^0.5.0",
     "passport-spotify": "^2.0.0",
