--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,8 +14,8 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
-    "@mui/material": "^5.2.4",
     "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
     "axios": "^0.24.0",
     "graphql": "^15.0.0",
     "js-cookie": "^3.0.1",
@@ -25,6 +25,7 @@
     "next": "12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.22",
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
